# alphalens-experiments

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-commit.bat
.github/workflows/: ci.yml
configs/: api_retry_policy.json  jpx_holidays_sample.csv
docs/adr/: ADR-0001-harness-policy.md
docs/execute/: 2026-03-20-data-adapter-skeleton-execute.md  2026-03-20-jp-calendar-missing-policy-execute.md  2026-03-20-jpx-holiday-calendar-integration-execute.md  2026-03-20-multi-factor-template-execute.md  2026-03-20-mvp-dod-execute.md  2026-03-20-raw-csv-e2e-execute.md  2026-03-20-visualize-factor-summary-execute.md  2026-03-22-analysis-summary-metrics-phase4-execute.md  2026-03-22-auth-api-adapter-phase3-execute.md  2026-03-22-holiday-auto-fetch-phase2-execute.md  2026-03-22-real-data-pipeline-phase1-execute.md  2026-03-24-rate-limit-backoff-phase6-execute.md  2026-03-24-retry-after-http-date-phase8-execute.md  2026-03-24-retry-after-phase7-execute.md  (+8 more)
docs/templates/: EXECUTE.md  PLAN.md
scripts/: fetch_jpx_holidays_csv.py  fetch_prices_with_adapter.py  generate_sample_jp_data.py  plot_factor_summary.py  prepare_raw_prices_csv.py  run_multi_factor_template.py  run_quality_gate.ps1  run_real_data_pipeline.py  setup_local_harness.ps1
state/: session_progress.json
tests/: test_calendar_policy.py  test_cli_smoke.py  test_data_adapters.py  test_data_loader.py  test_factor_builder.py  test_factor_compare.py  test_holiday_fetcher.py  test_plot_factor_summary.py  test_raw_csv_e2e.py  test_real_data_pipeline.py  test_secret_resolver.py
(+21 files in other folders)
